feat: add session cookie updater
